add modify user limit endpoint
